fix: Adjust modal header and footer positioning for better alignment

--- a/src/css/components/molecules/modals/modal.css
+++ b/src/css/components/molecules/modals/modal.css
@@ -29,11 +29,11 @@
 }
 .modal .modal-header {
     padding-top: calc(1rem + env(safe-area-inset-top));
-    top: calc( - env(safe-area-inset-top));
+    top: calc(0px - env(safe-area-inset-top));
 }
 .modal .modal-footer {
     padding-bottom: calc(1rem + env(safe-area-inset-bottom));
-    bottom: calc( - env(safe-area-inset-bottom));
+    bottom: calc(0px - env(safe-area-inset-bottom));
 }
 
 @media (min-width: 1024px) {
